<resources>
    <string name="app_name">hw_7_1</string>
    <string name="telephone">Telephone</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="registration">REGISTRATION</string>
    <string name="user_bio">user bio</string>
    <string name="user_telephone">user telephone</string>
    <string name="point_from">Point from</string>
    <string name="point_to">Point to</string>
    <string name="set_path">SET PATH</string>
    <string name="ok">OK</string>
    <string name="street">Street</string>
    <string name="house">House</string>
    <string name="flat">Flat</string>
    <string name="call">CALL</string>
</resources>